# dbt_minerva

./: .gitignore  README.md
projeto/: pyproject.toml
projeto/projeto/minerva/: dbt_project.yml
projeto/projeto/minerva/models/: source.yml
projeto/projeto/minerva/models/marts/human_resources/: config.yml  dim_secao.sql  dim_unidade.sql  doc_blocks.md  fato_10a_hora.sql
projeto/projeto/minerva/models/staging/: stg_funcionarios.sql  stg_secao.sql  stg_unidade.sql  stg_unidades.sql
